# core_war

./: .gitignore  42.s  CMakeLists.txt  Makefile  README.md  asm  author  bigzork.s  bot.cor  bot.s  corewar  g_m.txt  op.h  push.sh  start.sh  test.sh  test_custom  test_origin  turtle.s  ultima.cor  vmakahon.s  zork.cor  zork.s
CoreWar_ASM/: CMakeLists.txt
CoreWar_ASM/assembler/: asm_create_cor.c  asm_errors.c  asm_init_and_free.c  asm_label.c  asm_valid_main.c
CoreWar_ASM/includes/: asm.h  op.h
CoreWar_ASM/libft/: Makefile  ft_lstadd.c  ft_lstmap.c  ft_lstnew.c  ft_memcpy.c  ft_memdel.c  ft_memset.c  ft_putendl.c  ft_putnbr.c  ft_striter.c  ft_strnequ.c  ft_strsplit.c
CoreWar_ASM/libft/ft_printf/: ft_strlendup.c  prf_itoa_base.c  str_join_float.c
CoreWar_ASM/virtual_machine/: Makefile  vm_lldi.c  vm_params.c  vm_read.c  vm_xor.c  vm_zjmp.c
CoreWar_VM/: CMakeLists.txt  Makefile  ultima.s
CoreWar_VM/includes/: asm.h  vm.h
CoreWar_VM/libft/: ft_getword_len.c  ft_putendl_fd.c  ft_strclr.c  ft_strdel.c  ft_strstr.c  ft_strsub.c  ft_toupper.c
CoreWar_VM/libft/ft_printf/: build_float_join_str.c  build_mantissa_with_build_float.c  fill_length_type_hex.c
CoreWar_VM/virtual_machine/: Makefile  vm_add.c  vm_aff.c  vm_and.c  vm_and1.c  vm_arena.c  vm_cmd.c  vm_cycles.c  vm_debug.c  vm_errors.c  vm_fork.c  vm_free_and_init.c  vm_ft_other.c  vm_ld.c  vm_ldi.c  vm_lfork.c  vm_live.c  vm_lld.c  vm_lldi.c  vm_load.c  vm_lst.c  vm_main.c  vm_mng_bit1.c  vm_mng_bit2.c  vm_mng_func.c  vm_ncurses.c  vm_op.c  vm_or.c  vm_params.c  vm_parse_check.c  vm_print.c  vm_read.c  vm_st.c  vm_steps.c  vm_sti.c  vm_sub.c  vm_xor.c  vm_zjmp.c
Players/: helltrain.cor  test_ldi.cor
assembler/: Makefile  asm_check.c  asm_check_args.c  asm_cmd.c  asm_create_cor.c  asm_create_cor_fpos_opc.c  asm_create_cor_instr.c  asm_errors.c  asm_free_struct.c  asm_init_and_free.c  asm_label.c  asm_main.c  asm_name_cmt_valid.c  asm_op.c  asm_parse_line.c  asm_parse_main.c  asm_recalc_cmd_links.c  asm_valid_main.c  check_args.c  cmd_asm.c  create_cor.c  create_cor_fpos_opc.c  create_cor_instr.c  debug_asm.c  error_handler.c  free_asm.c  free_asm_struct.c  inter_main.c  label_asm.c  main.c  name_and_cmt_valid.c  op.c  parse.c  parse_asm.c  parse_asm_line.c  read_asm.c  recalc_cmd_links.c  settings.c  valid_main.c
assembler/Clion_asm/: 42.s  CMakeLists.txt  Explosive_Kitty.cor  Gagnant.cor  overwatch.s  zork.cor  zork.s
assembler/Clion_asm/assembler/: Makefile  asm_check.c  asm_check_args.c  asm_create_cor_instr.c  asm_errors.c  asm_free_struct.c  asm_init_and_free.c  asm_main.c  asm_name_cmt_valid.c  asm_parse_line.c  asm_parse_main.c  asm_print.c  asm_valid_main.c
assembler/Clion_asm/includes/: asm.h  color.h  op.h
assembler/Clion_asm/libft/: ft_atoi.c  ft_atoi_base.c  ft_isalnum.c  ft_isalpha.c  ft_lstiter.c  ft_memalloc.c  ft_memccpy.c  ft_memcmp.c  ft_memmove.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strcat.c  ft_strcpy.c  ft_strequ.c  ft_striteri.c  ft_strjoin.c  ft_strjoinstr.c  ft_strmapi.c  ft_strncat.c  ft_strncpy.c  ft_strrchr.c  ft_tolower.c
assembler/Clion_asm/libft/ft_printf/: fill_flag_with_precis.c  nbr_types_cast.c  print_atoi_nbr.c
champions/champoin_other/: ultima2.s
core_asm/: Makefile  error_handler.c  main.c  name_and_cmt_valid.c
includes/: asm.h  color.h  core.h  op.h  vm.h
libft/: Makefile  build_char_strchar.c  build_float_join_str.c  build_floats.c  build_mantissa_with_build_float.c  fill_flag_with_precis.c  fill_length_type_hex.c  fixsmall.c  ft_lstdel.c  ft_lstdelone.c  ft_minint.c  ft_printf.c  ft_printf.h  ft_putchar.c  ft_putstr.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoinstr.c  ft_strlendup.c  ft_strmap.c  ft_strtrim.c  ft_whitetrim.c  get_next_line.c  libft.h  nbr_types_cast.c  output_chars.c  parse_arg.c  prf_itoa_base.c  print_atoi_nbr.c  print_str_with_flags.c  str_join_float.c
libft/ft_printf/: build_char_strchar.c  build_floats.c  fixsmall.c  ft_printf.c  ft_printf.h  ft_printf.h.gch  print_str_with_flags.c
libft/includes/: ft_printf.h  get_next_line.h  libft.h
resourses/: Intra Projects init Edit.htm  aaa.cor  aaa.s  avt.cor  avt.s  correction_form.html  g.txt  op.c
test/: .gitignore  test-asm.sh  test-vm.sh
test/ressources/cor_dump/: Asombra.cor_60-cycles.dump  Car.cor_120-cycles.dump  Douceur_power.cor_10-cycles.dump  Douceur_power.cor_100-cycles.dump  Douceur_power.cor_20-cycles.dump  Explosive_Kitty.cor_10-cycles.dump  Explosive_Kitty.cor_180-cycles.dump  Gagnant.cor_110-cycles.dump  Gagnant.cor_190-cycles.dump  Kappa.cor_20-cycles.dump  Kappa.cor_30-cycles.dump  Kittystrophic.cor_190-cycles.dump  Machine-gun.cor_120-cycles.dump  Machine-gun.cor_130-cycles.dump  Machine-gun.cor_140-cycles.dump  Machine-gun.cor_20-cycles.dump  Machine-gun.cor_50-cycles.dump  MarineKing.cor_20-cycles.dump  MarineKing.cor_200-cycles.dump  MarineKing.cor_80-cycles.dump  Misaka_Mikoto.cor_10-cycles.dump  Misaka_Mikoto.cor_120-cycles.dump  Misaka_Mikoto.cor_240-cycles.dump  Misaka_Mikoto.cor_40-cycles.dump  Misaka_Mikoto.cor_50-cycles.dump  Misaka_Mikoto.cor_90-cycles.dump  Octobre_Rouge_V4.2.cor_20-cycles.dump  Rainbow_dash.cor_10-cycles.dump  THUNDER.cor_140-cycles.dump  THUNDER.cor_20-cycles.dump  THUNDER.cor_40-cycles.dump  THUNDER.cor_60-cycles.dump  THUNDER.cor_80-cycles.dump  Varimathras.cor_10-cycles.dump  (+229 more)
virtual_machine/: .add.c.swp  Makefile  fil  file  op.c  test.txt  vm_add.c  vm_aff.c  vm_and.c  vm_errors.c  vm_fork.c  vm_ld.c  vm_ldi.c  vm_ldi1.c  vm_lfork.c  vm_live.c  vm_lld.c  vm_lldi.c  vm_lldi1.c  vm_load.c  vm_m_cmd_triger.c  vm_m_cycler_to_die.c  vm_m_dump_arena.c  vm_m_init.c  vm_m_init1.c  vm_m_load_arena.c  vm_m_setrun_cycle.c  vm_main.c  vm_mng_bit1.c  vm_mng_bit2.c  vm_mng_func.c  vm_mng_func1.c  vm_mng_func_check.c  vm_n.c  vm_n_draw_win.c  vm_n_heart_win.c  vm_n_logo.c  vm_n_vis_arena.c  vm_ncurses.c  vm_or.c  (+10 more)
virtual_machine.3/: Makefile  vm_m_free.c  vm_m_init.c  vm_mng_bit2.c  vm_mng_func1.c  vm_n.c  vm_sti.c  vm_sti_mng.c  vm_xor.c  vm_zjmp.c
virtual_machine/Clion_vm/: Makefile
vm_champs/champs/: Survivor.s
(+60 files in other folders)
